syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.adguard.vpn.endpoint.generated";
option java_outer_classname = "UserMetricsProto";
option objc_class_prefix = "VPN";

message WsPingMsg {
    // used to measure ping, it doesn't matter what time unit is used and handling by client
    int64 requestTime = 1;
    bytes token = 2;
    bytes applicationId = 3;
    bool ignoredHandshake = 4;
}

message WsConnectivityInfoMsg {
    bytes token = 1;
    float mbytesDownloaded = 2; // deprecated
    float mbytesUploaded = 3; // deprecated
    bool refreshTokens = 6;
    float bytesDownloaded = 7;
    float bytesUploaded = 8;
}

message WsConnectivityErrorMsg {
    string code = 1;
    string payload = 2;
}

message WsConnectivityMsg {
    oneof payload {
        WsPingMsg pingMsg = 1;
        WsConnectivityInfoMsg connectivityInfoMsg = 2;
        WsConnectivityErrorMsg connectivityErrorMsg = 3;
    }
}
